--- a/options.html
+++ b/options.html
@@ -34,6 +34,36 @@
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label style="width:100%">
+                        Display icon timer
+                        <input type="checkbox" id="icon_timer" class="pull-right">
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label style="width:100%">
+                        Play sound when Horn is ready
+                        <input type="checkbox" id="horn_sound" class="pull-right">
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label style="width:100%">
+                        Display notification when horn is ready
+                        <input type="checkbox" id="horn_alert" class="pull-right">
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label style="width:100%">
                         Track Crowns
                         <input type="checkbox" id="track_crowns" class="pull-right">
                     </label>
