--- a/popuptsitus.html
+++ b/popuptsitus.html
@@ -18,6 +18,9 @@
         <tr><td>
             <a href="https://tsitu.github.io/MH-Tools/index.html" target="_blank" class="popup-link-out">Tsitu's Tools Website</a>
         </td></tr>
+        <tr><td id="tsitu_loader" class="popup-link">
+            Tsitu's Loader
+        </td></tr>
         <tr><td id="tsitu_map" class="popup-link">
             Tsitu's Map Solver (auto-populated)
         </td></tr>
