Added Tsitus loader autoload option

--- a/options.html
+++ b/options.html
@@ -70,6 +70,17 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label style="width:100%">
+                        Show Tsitu's Loader
+                        <input type="checkbox" id="tsitu_loader_on" class="pull-right">
+                    </label>
+                </div>
+            </div>
+        </div>
+
         <div class="row text-center">
             <div id="save_status" class="alert-success text-center" style="visibility: hidden;width:100%;">Options saved!</div>
             <button class="btn btn-default" id="save">Save</button>
