Made Tsitus Loader offset customizable

--- a/options.html
+++ b/options.html
@@ -80,6 +80,16 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label style="width:100%">
+                        Tsitu's Loader Offset (% from left)
+                        <input type="number" id="tsitu_loader_offset" class="pull-right">
+                    </label>
+                </div>
+            </div>
+        </div>
 
         <div class="row text-center">
             <div id="save_status" class="alert-success text-center" style="visibility: hidden;width:100%;">Options saved!</div>
