--- a/options.html
+++ b/options.html
@@ -9,23 +9,17 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body class="text-center">
-    <div class="container well">
+    <div class="container well" style="background-color:#bbb;margin-bottom:0;">
         <div class="row">
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label style="width:100%">
                         Display success messages
-                        <input type="checkbox" id="success_messages" class="pull-right">
+                        <input type="checkbox" id="success_messages" class="pull-right" checked>
                     </label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-body text-left">
                     <label style="width:100%">
                         Display error messages
-                        <input type="checkbox" id="error_messages" class="pull-right">
+                        <input type="checkbox" id="error_messages" class="pull-right" checked>
                     </label>
                 </div>
             </div>
@@ -35,7 +29,7 @@
                 <div class="panel-body text-left">
                     <label style="width:100%">
                         Display icon timer
-                        <input type="checkbox" id="icon_timer" class="pull-right">
+                        <input type="checkbox" id="icon_timer" class="pull-right" checked>
                     </label>
                 </div>
             </div>
@@ -46,6 +40,15 @@
                     <label style="width:100%">
                         Play sound when Horn is ready
                         <input type="checkbox" id="horn_sound" class="pull-right">
+                    </label>
+                    <label style="width:100%">
+                        Custom sound (default=none)<br/>
+                        <button id="play_sound" class="pull-right">▶️</button>
+                        <input type="text" id="custom_sound" placeholder="http://example.com/my.mp3">
+                    </label>
+                    <label style="width:100%">
+                        Sound Volume: <output for="horn_volume_range" id="horn_volume" style="display:inherit;">100</output>%
+                        <input type="range" min="0" max="100" value="100" id="horn_volume_range" step="1" class="pull-right">
                     </label>
                 </div>
             </div>
@@ -65,7 +68,7 @@
                 <div class="panel-body text-left">
                     <label style="width:100%">
                         Track Crowns
-                        <input type="checkbox" id="track_crowns" class="pull-right">
+                        <input type="checkbox" id="track_crowns" class="pull-right" checked>
                     </label>
                 </div>
             </div>
@@ -77,12 +80,6 @@
                         Show Tsitu's Loader
                         <input type="checkbox" id="tsitu_loader_on" class="pull-right">
                     </label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-body text-left">
                     <label style="width:100%">
                         Tsitu's Loader Offset (% from left)
                         <input type="number" id="tsitu_loader_offset" class="pull-right">
