Added web alert

--- a/options.html
+++ b/options.html
@@ -57,8 +57,12 @@
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label style="width:100%">
-                        Display notification when horn is ready
+                        Desktop Notification when horn is ready
                         <input type="checkbox" id="horn_alert" class="pull-right">
+                    </label>
+                    <label style="width:100%">
+                        Webpage Notification when horn is ready
+                        <input type="checkbox" id="horn_webalert" class="pull-right">
                     </label>
                 </div>
             </div>
