Updated Tsitus loader and removed his other tools

--- a/popup2.html
+++ b/popup2.html
@@ -18,8 +18,8 @@
             <tr><td>
                 <a href="popup.html" class="popup-link-out"><span class="pull-left">&lt;&lt;</span>Back</a>
             </td></tr>
-            <tr><td>
-                <a href="popuptsitus.html" class="popup-link-out"><div class="pull-right">&gt;&gt;</div>Tsitu's Tools</a>
+            <tr><td id="tsitu_loader" class="popup-link">
+                Tsitu's Loader
             </td></tr>
             <tr><td>
                 <a href="http://dbgames.info/mousehunt/" target="_blank" class="popup-link-out">Ryonn's DBGames</a>
