--- a/options.html
+++ b/options.html
@@ -122,6 +122,19 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label class="full_width">
+                        Show Debug-level Logs
+                        <div class="switch pull-right">
+                            <input type="checkbox" id="debug_logging" class="pull-right">
+                            <span class="slider round"></span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
 
         <div class="row text-center">
             <div id="save_status" class="alert-success text-center">Options saved!</div>
