Updated popup.html and popup2.html
- Rearranged link ordering

- Clarified descriptions

- Removed obsolete Friend Refresh link

- Added Useful Userscripts link

--- a/src/popup.html
+++ b/src/popup.html
@@ -17,32 +17,32 @@
         <h3><a href="https://www.agiletravels.com" target="_blank" class="popup-link-out">Jack's MH Tools<span id="version" class="text-muted" style="font-size:small;"></span></a></h3>
         <table class="table text-center table-responsive table-hover table-bordered">
         <tbody>
+            <tr><td id="userhistory" class="popup-link">
+                Your Hunt History
+            </td></tr>
             <tr><td id="mhmh" class="popup-link">
                 Map Helper (auto-populated)
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/" target="_blank" class="popup-link-out">Attraction Rate</a>
+                <a href="https://mhhunthelper.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Looter</a>
+                <a href="https://mhhunthelper.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/mapper.php" target="_blank" class="popup-link-out">Mapper</a>
+                <a href="https://mhhunthelper.agiletravels.com/mapper.php" target="_blank" class="popup-link-out">Map Contents</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/converter.php" target="_blank" class="popup-link-out">Converter</a>
+                <a href="https://mhhunthelper.agiletravels.com/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/tracker.php" target="_blank" class="popup-link-out">Tracker</a>
-            </td></tr>
-            <tr><td id="userhistory" class="popup-link">
-                Your Hunt History
+                <a href="https://mhhunthelper.agiletravels.com/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/updates.php" target="_blank" class="popup-link-out">Updates</a>
+                <a href="https://www.agiletravels.com/updates.php" target="_blank" class="popup-link-out">Version History</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mousehuntgame.com/forum/showthread.php?130827-Jack-s-MH-Tools" target="_blank" class="popup-link-out">Feedback/Support Forum</a>
+                <a href="https://www.mousehuntgame.com/forum/showthread.php?130827-Jack-s-MH-Tools" target="_blank" class="popup-link-out">Feedback/Support</a>
             </td></tr>
             <tr><td id="options_button" class="popup-link">
                 Options
