--- a/src/popup2.html
+++ b/src/popup2.html
@@ -19,40 +19,40 @@
                 <a href="popup.html" class="popup-link-out"><span class="pull-left">&lt;&lt;</span>Back</a>
             </td></tr>
             <tr><td id="tsitu_loader" class="popup-link">
-                Tsitu's Loader
+                tsitu's Auto-Loader
             </td></tr>
             <tr><td>
-                <a href="http://dbgames.info/mousehunt/" target="_blank" class="popup-link-out">Ryonn's DBGames</a>
+                <a href="http://dbgames.info/mousehunt/" target="_blank" class="popup-link-out">Ryonn's MH Database</a>
             </td></tr>
             <tr><td id="ryonn" class="popup-link">
                 Ryonn's Tavern (auto-populated)
             </td></tr>
             <tr><td>
-                <a href="http://www.cherecwich.com/mousehunt.html" target="_blank" class="popup-link-out">Silvermane's tools</a>
-            </td></tr>
-            <tr><td>
-                <a href="https://chrome.google.com/webstore/detail/dsxcs-mousehunt-helper/engkjbflhflegibopjicncfjpbjfldph?hl=en" target="_blank" class="popup-link-out">DSXC's Addon</a>
-            </td></tr>
-            <tr><td>
                 <a href="http://horntracker.com/" target="_blank" class="popup-link-out">HornTracker</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.reddit.com/r/mousehunt/wiki/guide" target="_blank" class="popup-link-out">Subreddit Guides</a>
+                <a href="http://www.cherecwich.com/mousehunt.html" target="_blank" class="popup-link-out">Silvermane's Tools</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.reddit.com/r/mousehunt/" target="_blank" class="popup-link-out">MH Subreddit</a>
+                <a href="https://chrome.google.com/webstore/detail/dsxcs-mousehunt-helper/engkjbflhflegibopjicncfjpbjfldph?hl=en" target="_blank" class="popup-link-out">DSXC's MH Helper</a>
             </td></tr>
             <tr><td>
-                <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">MH Discord</a>
+                <a href="https://www.reddit.com/r/mousehunt/" target="_blank" class="popup-link-out">Subreddit</a>
             </td></tr>
             <tr><td>
-                <a href="https://sites.google.com/site/mhtimerslinks/" target="_blank" class="popup-link-out">MH Timers and Links</a>
+                <a href="https://www.reddit.com/r/mousehunt/wiki/guide" target="_blank" class="popup-link-out">Subreddit's Game Guide</a>
             </td></tr>
             <tr><td>
-                <a href="http://mhwiki.hitgrab.com/wiki/index.php/Main_Page" target="_blank" class="popup-link-out">MH Wiki</a>
+                <a href="https://www.reddit.com/r/mousehunt/comments/avazpr/resource_useful_userscripts/" target="_blank" class="popup-link-out">Useful Userscripts</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mousehuntgame.com/canvas/profile.php?refresh" target="_blank" class="popup-link-out">Friend Refresh</a>
+                <a href="https://sites.google.com/site/mhtimerslinks/" target="_blank" class="popup-link-out">Timers & Links</a>
+            </td></tr>
+            <tr><td>
+                <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Discord Server</a>
+            </td></tr>
+            <tr><td>
+                <a href="http://mhwiki.hitgrab.com/wiki/index.php/Main_Page" target="_blank" class="popup-link-out">Wiki</a>
             </td></tr>
             <tr><td>
                 <a href="popup.html" class="popup-link-out""><span class="pull-left">&lt;&lt;</span>Back</a>
