--- a/src/popup.html
+++ b/src/popup.html
@@ -14,14 +14,14 @@
         Sound Horn: <span id="huntTimer">-:--</span>
     </div>
     <div class="container-fluid">
-        <h3><a href="https://www.agiletravels.com" target="_blank" class="popup-link-out">Jack's MH Tools<span id="version" class="text-muted" style="font-size:small;"></span></a></h3>
+        <h3><a href="https://www.agiletravels.com" target="_blank" class="popup-link-out">MH Community Tools<span id="version" class="text-muted" style="font-size:small;"></span></a></h3>
         <table class="table text-center table-responsive table-hover table-bordered">
         <tbody>
             <tr><td id="userhistory" class="popup-link">
                 Your Hunt History
             </td></tr>
             <tr><td id="mhmh" class="popup-link">
-                Map Helper (auto-populated)
+                Jack's Map Helper (auto)
             </td></tr>
             <tr><td>
                 <a href="https://mhhunthelper.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
