--- a/src/options.html
+++ b/src/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>MHCT (Jacks Helper) Options</title>
+    <title>MHCT Helper Options</title>
     <meta charset="utf-8">
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
