--- a/src/popup.html
+++ b/src/popup.html
@@ -21,7 +21,7 @@
                 Your Hunt History
             </td></tr>
             <tr><td id="mhmh" class="popup-link">
-                Jack's Map Helper (auto)
+                MHCT Map Helper (auto)
             </td></tr>
             <tr><td>
                 <a href="https://mhhunthelper.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
@@ -42,7 +42,7 @@
                 <a href="https://www.agiletravels.com/updates.php" target="_blank" class="popup-link-out">Version History</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mousehuntgame.com/forum/showthread.php?130827-Jack-s-MH-Tools" target="_blank" class="popup-link-out">Feedback/Support</a>
+                <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Discord Server</a>Feedback/Support</a>
             </td></tr>
             <tr><td id="options_button" class="popup-link">
                 Options
