--- a/src/popup.html
+++ b/src/popup.html
@@ -42,7 +42,7 @@
                 <a href="https://www.agiletravels.com/updates.php" target="_blank" class="popup-link-out">Version History</a>
             </td></tr>
             <tr><td>
-                <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Discord Server</a>Feedback/Support</a>
+                <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Feedback/Support</a>
             </td></tr>
             <tr><td id="options_button" class="popup-link">
                 Options
