--- a/src/popup.html
+++ b/src/popup.html
@@ -14,7 +14,8 @@
         Sound Horn: <span id="huntTimer">-:--</span>
     </div>
     <div class="container-fluid">
-        <h3><a href="https://www.agiletravels.com" target="_blank" class="popup-link-out">MH Community Tools<span id="version" class="text-muted" style="font-size:small;"></span></a></h3>
+        <h3><a href="https://www.agiletravels.com" target="_blank" class="popup-link-out">MH Community Tools</a></h3>
+        <span id="version" class="text-muted" style="font-size:small;"></span>
         <table class="table text-center table-responsive table-hover table-bordered">
         <tbody>
             <tr><td id="userhistory" class="popup-link">
@@ -52,6 +53,7 @@
             </td></tr>
         </tbody>
         </table>
+        <h4>Support us on <a href="https://www.patreon.com/mhct" target="_blank">Patreon</a>!</h4>
     </div>
     <div id="error_popup" class="alert alert-danger error_popup"></div>
 </body>
