--- a/src/popup.html
+++ b/src/popup.html
@@ -25,19 +25,19 @@
                 MHCT Map Helper (auto)
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
+                <a href="https://www.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
+                <a href="https://www.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/mapper.php" target="_blank" class="popup-link-out">Map Contents</a>
+                <a href="https://www.agiletravels.com/mapper.php" target="_blank" class="popup-link-out">Map Contents</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
+                <a href="https://www.agiletravels.com/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
             </td></tr>
             <tr><td>
-                <a href="https://mhhunthelper.agiletravels.com/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
+                <a href="https://www.agiletravels.com/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
             </td></tr>
             <tr><td>
                 <a href="https://www.agiletravels.com/updates.php" target="_blank" class="popup-link-out">Version History</a>
