--- a/src/popup.html
+++ b/src/popup.html
@@ -25,7 +25,7 @@
                 MHCT Map Helper (auto)
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
+                <a href="https://www.agiletravels.com/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
             <tr><td>
                 <a href="https://www.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
