Updated list of contributors on README.md

--- a/src/popup.html
+++ b/src/popup.html
@@ -21,8 +21,8 @@
             <tr><td id="userhistory" class="popup-link">
                 Your Hunt History
             </td></tr>
-            <tr><td id="mhmh" class="popup-link">
-                MHCT Map Helper (auto)
+            <tr><td>
+                <a href="https://agiletravels.com/maphelper.php" target="_blank" class="popup-link-out">MHCT Map Helper (auto)</a>
             </td></tr>
             <tr><td>
                 <a href="https://www.agiletravels.com/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
