Updated Extension Popup (#96)
* Updated link for Mouse Attraction Rates popup

* Removed popup for Version History

* Updated list of contributors on README.md

Co-authored-by: owentheman <imsmartypants@gmail.com>

--- a/src/popup.html
+++ b/src/popup.html
@@ -25,7 +25,7 @@
                 MHCT Map Helper (auto)
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
+                <a href="https://www.agiletravels.com/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
             <tr><td>
                 <a href="https://www.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
@@ -38,9 +38,6 @@
             </td></tr>
             <tr><td>
                 <a href="https://www.agiletravels.com/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
-            </td></tr>
-            <tr><td>
-                <a href="https://www.agiletravels.com/updates.php" target="_blank" class="popup-link-out">Version History</a>
             </td></tr>
             <tr><td>
                 <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Feedback/Support</a>
