Added global tracking option

--- a/src/options.html
+++ b/src/options.html
@@ -93,9 +93,9 @@
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label class="full_width">
-                        Track Crowns
+                        Tracking Enabled
                         <div class="switch pull-right">
-	                        <input type="checkbox" id="track_crowns" class="pull-right" checked>
+	                        <input type="checkbox" id="tracking_enabled" class="pull-right" checked>
 	                        <span class="slider round"></span>
                         </div>
                     </label>
