Changed options save button color

--- a/src/options.html
+++ b/src/options.html
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <button class="btn btn-default" id="save">Save</button>
+    <button class="btn btn-primary" id="save">Save</button>
     <div id="save_status" class="alert-success text-center">Options saved!</div>
     <script type="text/javascript" src="scripts/options.js"></script>
 </body>
