--- a/src/popup.html
+++ b/src/popup.html
@@ -14,7 +14,7 @@
         Sound Horn: <span id="huntTimer">-:--</span>
     </div>
     <div class="container-fluid">
-        <h3><a href="https://www.agiletravels.com" target="_blank" class="popup-link-out">MH Community Tools</a></h3>
+        <h3><a href="https://www.mhct.win" target="_blank" class="popup-link-out">MH Community Tools</a></h3>
         <span id="version" class="text-muted" style="font-size:small;"></span>
         <table class="table text-center table-responsive table-hover table-bordered">
         <tbody>
@@ -25,19 +25,19 @@
                 MHCT Map Helper (auto)
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
+                <a href="https://www.mhct.win/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
+                <a href="https://www.mhct.win/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/mapper.php" target="_blank" class="popup-link-out">Map Contents</a>
+                <a href="https://www.mhct.win/mapper.php" target="_blank" class="popup-link-out">Map Contents</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
+                <a href="https://www.mhct.win/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.agiletravels.com/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
+                <a href="https://www.mhct.win/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
             </td></tr>
             <tr><td>
                 <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Feedback/Support</a>
