--- a/src/popup.html
+++ b/src/popup.html
@@ -28,16 +28,28 @@
                 <a href="https://www.mhct.win/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mhct.win/loot.php" target="_blank" class="popup-link-out">Loot Drop Rates</a>
+                <a href="https://www.mhct.win/loot.php" target="_blank" class="popup-link-out">Looter (Drop Rates)</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mhct.win/mapper.php" target="_blank" class="popup-link-out">Map Contents</a>
+                <a href="https://www.mhct.win/mapper.php" target="_blank" class="popup-link-out">Mapper (Map Contents)</a>
+            </td></tr>
+            <tr><td>
+                <a href="https://www.mhct.win/reverse-mapper.php" target="_blank" class="popup-link-out">Reverse Mapper</a>
             </td></tr>
             <tr><td>
                 <a href="https://www.mhct.win/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mhct.win/tracker.php" target="_blank" class="popup-link-out">Relic Hunter & Global Stats</a>
+                <a href="https://www.mhct.win/rh-tracker.php" target="_blank" class="popup-link-out">Relic Hunter Tracker</a>
+            </td></tr>
+            <tr><td>
+                <a href="https://www.mhct.win/countdown.php" target="_blank" class="popup-link-out">Events Countdown</a>
+            </td></tr>
+            <tr><td>
+                <a href="https://www.mhct.win/tracker.php" target="_blank" class="popup-link-out">Stats</a>
+            </td></tr>
+            <tr><td>
+                <a href="https://www.mhct.win/faq.php" target="_blank" class="popup-link-out">F.A.Q.</a>
             </td></tr>
             <tr><td>
                 <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Feedback/Support</a>
