Added unobtrusive mode to horn notification, and stopped switching to mh tab for map solvers

--- a/src/options.html
+++ b/src/options.html
@@ -86,6 +86,13 @@
 	                        <span class="slider round"></span>
                         </div>
                     </label>
+                    <label class="full_width">
+                        Switch to MH page for Webpage Notification
+                        <div class="switch pull-right">
+	                        <input type="checkbox" id="show_mh_tab_on_alert" class="pull-right">
+	                        <span class="slider round"></span>
+                        </div>
+                    </label>
                 </div>
             </div>
         </div>
