Adding back normal alert

--- a/src/options.html
+++ b/src/options.html
@@ -87,9 +87,9 @@
                         </div>
                     </label>
                     <label class="full_width">
-                        Switch to MH page for Webpage Notification
+                        Popup Notification when horn is ready
                         <div class="switch pull-right">
-	                        <input type="checkbox" id="show_mh_tab_on_alert" class="pull-right">
+	                        <input type="checkbox" id="horn_popalert" class="pull-right">
 	                        <span class="slider round"></span>
                         </div>
                     </label>
