Revert "Removing other changes"
This reverts commit 4eba6bb24e17bc2e4f5a8e8deed2c9fb871817a3.

--- a/src/options.html
+++ b/src/options.html
@@ -86,6 +86,13 @@
 	                        <span class="slider round"></span>
                         </div>
                     </label>
+                    <label class="full_width">
+                        Popup Notification when horn is ready
+                        <div class="switch pull-right">
+	                        <input type="checkbox" id="horn_popalert" class="pull-right">
+	                        <span class="slider round"></span>
+                        </div>
+                    </label>
                 </div>
             </div>
         </div>
