Address first round of PR feedback

--- a/src/popup.html
+++ b/src/popup.html
@@ -20,7 +20,7 @@
                 Your Hunt History
             </td></tr>
             <tr><td id="mhmh" class="popup-link">
-                Map Helper
+                Map Helper (auto)
             </td></tr>
             <tr><td>
                 <a href="https://www.mhct.win/attractions.php" target="_blank" class="popup-link-out">Attraction Rates</a>
@@ -29,10 +29,10 @@
                 <a href="https://www.mhct.win/mapper.php" target="_blank" class="popup-link-out">Mapper</a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mhct.win/reverse-mapper.php" target="_blank" class="popup-link-out">Reverse Mapper</a>
+                <a href="https://www.mhct.win/loot.php" target="_blank" class="popup-link-out">Looter <em>(Drop Rates)</em></a>
             </td></tr>
             <tr><td>
-                <a href="https://www.mhct.win/loot.php" target="_blank" class="popup-link-out">Looter <em>(Drop Rates)</em></a>
+                <a href="https://www.mhct.win/reverse-mapper.php" target="_blank" class="popup-link-out">Reverse Mapper</a>
             </td></tr>
             <tr><td>
                 <a href="https://www.mhct.win/converter.php" target="_blank" class="popup-link-out">Convertibles</a>
