--- a/src/popup2.html
+++ b/src/popup2.html
@@ -50,7 +50,7 @@
                 <a href="https://discord.gg/E4utmBD" target="_blank" class="popup-link-out">Discord Server</a>
             </td></tr>
             <tr><td>
-                <a href="http://mhwiki.hitgrab.com/wiki/index.php/Main_Page" target="_blank" class="popup-link-out">Wiki</a>
+                <a href="https://mhwiki.hitgrab.com/wiki/index.php/Main_Page" target="_blank" class="popup-link-out">Wiki</a>
             </td></tr>
             <tr><td>
                 <a href="popup.html" class="popup-link-out"><span class="arrow">←</span> Back</a>
