Fixing hover and moving options to gear icon

--- a/src/popup2.html
+++ b/src/popup2.html
@@ -12,7 +12,7 @@
 <body class="text-center">
     <div class="container-fluid">
         <br/>
-        <table class="table text-center table-responsive table-hover table-bordered">
+        <table class="table text-center table-responsive table-bordered">
         <thead></thead>
         <tbody>
             <tr><td>
