--- a/src/popup.html
+++ b/src/popup.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <h3><a href="https://www.mhct.win" target="_blank" class="popup-link-out">MH Community Tools</a></h3>
         <span id="version" class="text-muted" style="font-size:small;"></span>
-        <table class="table text-center table-responsive table-hover table-bordered">
+        <table class="table text-center table-responsive table-bordered">
         <tbody>
             <tr><td id="userhistory" class="popup-link" colspan="2">
                 Your Hunt History
@@ -65,15 +65,14 @@
                     <a href="https://www.mhct.win/faq.php" target="_blank" class="popup-link-out">F.A.Q.</a>
                 </td>
             </tr>
-            <tr><td id="options_button" class="popup-link" colspan="2">
-                Options
-            </td></tr>
             <tr><td colspan="2">
                 <a href="popup2.html" class="popup-link-out"><div class="pull-right">&gt;&gt;</div>More Links</a>
             </td></tr>
         </tbody>
         </table>
-        <h4>Support us <a href="https://www.mhct.win/donations" target="_blank">here</a>.</h4>
+        <h4><svg id="options_button" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="popup-link pull-left bi bi-gear-fill" viewBox="0 0 16 16">
+            <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+          </svg> Support us <a href="https://www.mhct.win/donations" target="_blank">here</a>.</h4>
     </div>
     <div id="error_popup" class="alert alert-danger error_popup"></div>
 </body>
