--- a/src/options.html
+++ b/src/options.html
@@ -155,6 +155,19 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label class="full_width">
+                        Dark Mode
+                        <div class="switch pull-right">
+	                        <input type="checkbox" id="dark_mode" class="pull-right" checked>
+	                        <span class="slider round"></span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
     </div>
 
     <button class="btn btn-primary" id="save">Save</button>
