--- a/src/options.html
+++ b/src/options.html
@@ -17,6 +17,19 @@
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label class="full_width">
+                        Tracking Enabled
+                        <div class="switch pull-right">
+                            <input type="checkbox" id="tracking_enabled" class="pull-right" checked>
+                            <span class="slider round"></span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label class="full_width">
                         Display success messages
                         <div class="switch pull-right">
                             <input type="checkbox" id="success_messages" class="pull-right" checked>
@@ -90,22 +103,9 @@
                         </div>
                     </label>
                     <label class="full_width">
-                        Popup Notification when horn is ready
+                        Popup Notification when horn is ready (by Haoala)
                         <div class="switch pull-right">
                             <input type="checkbox" id="horn_popalert" class="pull-right">
-                            <span class="slider round"></span>
-                        </div>
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-body text-left">
-                    <label class="full_width">
-                        Tracking Enabled
-                        <div class="switch pull-right">
-                            <input type="checkbox" id="tracking_enabled" class="pull-right" checked>
                             <span class="slider round"></span>
                         </div>
                     </label>
@@ -138,19 +138,6 @@
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label class="full_width">
-                        Show Debug-level Logs
-                        <div class="switch pull-right">
-                            <input type="checkbox" id="debug_logging" class="pull-right">
-                            <span class="slider round"></span>
-                        </div>
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-body text-left">
-                    <label class="full_width">
                         Escape button closes UI Elements
                         <div class="switch pull-right">
                             <input type="checkbox" id="escape_button_close" class="pull-right">
@@ -164,9 +151,22 @@
             <div class="panel panel-default">
                 <div class="panel-body text-left">
                     <label class="full_width">
-                        Dark Mode
+                        Dark Mode (by PotatoSalad)
                         <div class="switch pull-right">
                             <input type="checkbox" id="dark_mode" class="pull-right" checked>
+                            <span class="slider round"></span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-body text-left">
+                    <label class="full_width">
+                        Show Debug-level Logs
+                        <div class="switch pull-right">
+                            <input type="checkbox" id="debug_logging" class="pull-right">
                             <span class="slider round"></span>
                         </div>
                     </label>
