Added [MHCT Scav Helper (auto)] Button

--- a/src/popup.html
+++ b/src/popup.html
@@ -24,6 +24,9 @@
             <tr><td id="mhmh" class="popup-link" colspan="2">
                 MHCT Map Helper (auto)
             </td></tr>
+            <tr><td id="mhsh" class="popup-link" colspan="2">
+                MHCT Scav Helper (auto)
+            </td></tr>
             <tr><td colspan="2">
                 <a href="https://www.mhct.win/attractions.php" target="_blank" class="popup-link-out">Mouse Attraction Rates</a>
             </td></tr>
