--- a/src/options.html
+++ b/src/options.html
@@ -103,7 +103,7 @@
                         </div>
                     </label>
                     <label class="full_width">
-                        Unobtrusive webpage alert when Horn is ready (by Haoala, Firefox Unsupported)
+                        Non-intrusive webpage alert when Horn is ready (by Haoala, Firefox Unsupported)
                         <div class="switch pull-right">
                             <input type="checkbox" id="horn_popalert" class="pull-right">
                             <span class="slider round"></span>
