Add toast notification option

--- a/src/options.html
+++ b/src/options.html
@@ -35,6 +35,7 @@
                             <select id="message_display" class="pull-right">
                                 <option value="hud">HUD</option>
                                 <option value="banner">Banner</option>
+                                <option value="toast">Toast</option>
                             </select>
                         </div>
                     </label>
